crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__plan_review_zh_hans_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x30
Carina ▾   ·  carina 会话                                          model   执行
────────────────────────────────────────────────────────────────────────────────


 ╭ 审阅计划 ──────────────────────────────────────────────────────────────────╮
 │ 等待你的决定                                                               │
 │ 批准会开始实施；修改会把评论放入输入框；关闭不会执行任何操作。             │
 │ 1 条评论                                                                   │
 │                                                                            │
 │  待批准计划 ────────────────────────────────────────────────────────────── │
 │    L1   1. 检查会话投影边界与计划身份。                                    │
 │ ▌  L2 • 2. 保持中文批注归属，即使这一条计划内容很长并且在八十列终端中需要  │
 │         自然换行，也不能改变逻辑行锚点。                                   │
 │    L3 • 3. 验证无颜色和 ASCII 回退时的坐标。                               │
 │    L4   4. 读取相关协议与现有测试。                                        │
 │    L5   5. 更新审批请求但不绕过治理。                                      │
 │    L6   6. 运行聚焦测试与完整质量门禁。                                    │
 │    L7   7. 检查重新打开计划的行为。                                        │
 │    L8   8. 保留输入框中已有的草稿。                                        │
 │    L9   9. 验证鼠标滚轮和键盘导航一致。                                    │
 │   L10   10. 检查多语言按钮不会溢出。                                       │
 │   L11   11. 确认关闭审阅不会执行计划。                                     │
 │   L12   12. 记录最终验证结果。                                             │
 │ ────────────────────────────────────────────────────────────────────────── │
 │ [ 批准 ] [ 修改 ] [ 评论 ] [ 关闭审阅 ]                                    │
 │                                                                            │
 │ A 批准 S 修改 C 评论 M 范围 Q 关闭 Up/Dn J/K Page Home/End                 │
 │                                                                            │
 ╰────────────────────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(25,0) (Rgb(150, 160, 156), Reset, NONE)
(66,0)..(73,0) (Rgb(150, 160, 156), Reset, NONE)
(74,0)..(80,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(80,1) (Rgb(52, 65, 68), Reset, NONE)
(1,4)..(79,4) (Rgb(52, 65, 68), Reset, NONE)
(1,5)..(2,5) (Rgb(52, 65, 68), Reset, NONE)
(3,5)..(15,5) (Rgb(142, 219, 210), Reset, BOLD)
(78,5)..(79,5) (Rgb(52, 65, 68), Reset, NONE)
(1,6)..(2,6) (Rgb(52, 65, 68), Reset, NONE)
(3,6)..(65,6) (Rgb(150, 160, 156), Reset, NONE)
(78,6)..(79,6) (Rgb(52, 65, 68), Reset, NONE)
(1,7)..(2,7) (Rgb(52, 65, 68), Reset, NONE)
(3,7)..(11,7) (Rgb(150, 160, 156), Reset, NONE)
(78,7)..(79,7) (Rgb(52, 65, 68), Reset, NONE)
(1,8)..(2,8) (Rgb(52, 65, 68), Reset, NONE)
(78,8)..(79,8) (Rgb(52, 65, 68), Reset, NONE)
(1,9)..(2,9) (Rgb(52, 65, 68), Reset, NONE)
(3,9)..(77,9) (Rgb(52, 65, 68), Reset, NONE)
(78,9)..(79,9) (Rgb(52, 65, 68), Reset, NONE)
(1,10)..(2,10) (Rgb(52, 65, 68), Reset, NONE)
(4,10)..(8,10) (Rgb(150, 160, 156), Reset, NONE)
(78,10)..(79,10) (Rgb(52, 65, 68), Reset, NONE)
(1,11)..(2,11) (Rgb(52, 65, 68), Reset, NONE)
(3,11)..(8,11) (Reset, Rgb(36, 61, 62), BOLD)
(8,11)..(11,11) (Rgb(232, 168, 95), Rgb(36, 61, 62), BOLD)
(11,11)..(76,11) (Reset, Rgb(36, 61, 62), BOLD)
(78,11)..(79,11) (Rgb(52, 65, 68), Reset, NONE)
(1,12)..(2,12) (Rgb(52, 65, 68), Reset, NONE)
(3,12)..(43,12) (Reset, Rgb(36, 61, 62), BOLD)
(78,12)..(79,12) (Rgb(52, 65, 68), Reset, NONE)
(1,13)..(2,13) (Rgb(52, 65, 68), Reset, NONE)
(4,13)..(8,13) (Rgb(150, 160, 156), Reset, NONE)
(8,13)..(11,13) (Rgb(232, 168, 95), Reset, NONE)
(78,13)..(79,13) (Rgb(52, 65, 68), Reset, NONE)
(1,14)..(2,14) (Rgb(52, 65, 68), Reset, NONE)
(4,14)..(8,14) (Rgb(150, 160, 156), Reset, NONE)
(78,14)..(79,14) (Rgb(52, 65, 68), Reset, NONE)
(1,15)..(2,15) (Rgb(52, 65, 68), Reset, NONE)
(4,15)..(8,15) (Rgb(150, 160, 156), Reset, NONE)
(78,15)..(79,15) (Rgb(52, 65, 68), Reset, NONE)
(1,16)..(2,16) (Rgb(52, 65, 68), Reset, NONE)
(4,16)..(8,16) (Rgb(150, 160, 156), Reset, NONE)
(78,16)..(79,16) (Rgb(52, 65, 68), Reset, NONE)
(1,17)..(2,17) (Rgb(52, 65, 68), Reset, NONE)
(4,17)..(8,17) (Rgb(150, 160, 156), Reset, NONE)
(78,17)..(79,17) (Rgb(52, 65, 68), Reset, NONE)
(1,18)..(2,18) (Rgb(52, 65, 68), Reset, NONE)
(4,18)..(8,18) (Rgb(150, 160, 156), Reset, NONE)
(78,18)..(79,18) (Rgb(52, 65, 68), Reset, NONE)
(1,19)..(2,19) (Rgb(52, 65, 68), Reset, NONE)
(4,19)..(8,19) (Rgb(150, 160, 156), Reset, NONE)
(78,19)..(79,19) (Rgb(52, 65, 68), Reset, NONE)
(1,20)..(2,20) (Rgb(52, 65, 68), Reset, NONE)
(4,20)..(8,20) (Rgb(150, 160, 156), Reset, NONE)
(78,20)..(79,20) (Rgb(52, 65, 68), Reset, NONE)
(1,21)..(2,21) (Rgb(52, 65, 68), Reset, NONE)
(4,21)..(8,21) (Rgb(150, 160, 156), Reset, NONE)
(78,21)..(79,21) (Rgb(52, 65, 68), Reset, NONE)
(1,22)..(2,22) (Rgb(52, 65, 68), Reset, NONE)
(4,22)..(8,22) (Rgb(150, 160, 156), Reset, NONE)
(78,22)..(79,22) (Rgb(52, 65, 68), Reset, NONE)
(1,23)..(2,23) (Rgb(52, 65, 68), Reset, NONE)
(3,23)..(77,23) (Rgb(52, 65, 68), Reset, NONE)
(78,23)..(79,23) (Rgb(52, 65, 68), Reset, NONE)
(1,24)..(2,24) (Rgb(52, 65, 68), Reset, NONE)
(3,24)..(11,24) (Rgb(142, 219, 210), Reset, NONE)
(12,24)..(20,24) (Rgb(142, 219, 210), Reset, NONE)
(21,24)..(29,24) (Rgb(142, 219, 210), Reset, NONE)
(30,24)..(42,24) (Rgb(142, 219, 210), Reset, NONE)
(78,24)..(79,24) (Rgb(52, 65, 68), Reset, NONE)
(1,25)..(2,25) (Rgb(52, 65, 68), Reset, NONE)
(78,25)..(79,25) (Rgb(52, 65, 68), Reset, NONE)
(1,26)..(2,26) (Rgb(52, 65, 68), Reset, NONE)
(3,26)..(77,26) (Rgb(150, 160, 156), Reset, NONE)
(78,26)..(79,26) (Rgb(52, 65, 68), Reset, NONE)
(1,27)..(2,27) (Rgb(52, 65, 68), Reset, NONE)
(3,27)..(77,27) (Rgb(150, 160, 156), Reset, NONE)
(78,27)..(79,27) (Rgb(52, 65, 68), Reset, NONE)
(1,28)..(79,28) (Rgb(52, 65, 68), Reset, NONE)
