crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__product_menu_zh_hans_ascii.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered_frame_contract(terminal.backend().buffer())
---
size=80x24
Carina v   |  product-menu 会话                                    model   执行
────────────────────────────────────────────────────────────────────────────────
┌ Carina 菜单 ─────────────┐
│> 新会话                  │
│  会话                    │
│  状态                    │
│  设置                    │
│  帮助                    │
└──────────────────────────┘

                                     Carina
                      输入需求，或 /help · /model · /status









 ------------------------------------------------------------------------------
 > 描述你想完成的改动。
 ------------------------------------------------------------------------------
styles:
(0,0)..(9,0) (Rgb(142, 219, 210), Reset, BOLD)
(9,0)..(31,0) (Rgb(150, 160, 156), Reset, NONE)
(66,0)..(73,0) (Rgb(150, 160, 156), Reset, NONE)
(74,0)..(80,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(80,1) (Rgb(52, 65, 68), Reset, NONE)
(0,2)..(28,2) (Rgb(52, 65, 68), Reset, NONE)
(0,3)..(1,3) (Rgb(52, 65, 68), Reset, NONE)
(1,3)..(27,3) (Reset, Rgb(36, 61, 62), BOLD)
(27,3)..(28,3) (Rgb(52, 65, 68), Reset, NONE)
(0,4)..(1,4) (Rgb(52, 65, 68), Reset, NONE)
(27,4)..(28,4) (Rgb(52, 65, 68), Reset, NONE)
(0,5)..(1,5) (Rgb(52, 65, 68), Reset, NONE)
(27,5)..(28,5) (Rgb(52, 65, 68), Reset, NONE)
(0,6)..(1,6) (Rgb(52, 65, 68), Reset, NONE)
(27,6)..(28,6) (Rgb(52, 65, 68), Reset, NONE)
(0,7)..(1,7) (Rgb(52, 65, 68), Reset, NONE)
(27,7)..(28,7) (Rgb(52, 65, 68), Reset, NONE)
(0,8)..(28,8) (Rgb(52, 65, 68), Reset, NONE)
(37,10)..(43,10) (Reset, Reset, BOLD)
(22,11)..(59,11) (Rgb(150, 160, 156), Reset, NONE)
(1,21)..(79,21) (Rgb(52, 65, 68), Reset, NONE)
(1,22)..(79,22) (Rgb(150, 160, 156), Reset, NONE)
(1,23)..(79,23) (Rgb(52, 65, 68), Reset, NONE)
