crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__symbols_preview_zh_hans_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x24
Carina ▾   ·  carina 会话                                                                                  model   执行
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                             ╭ 设置 / 符号 ───────────────────────────────────────────────╮
                             │ 请选择保持对齐的行。方框或错位符号表示字体覆盖不完整。     │
                             │                                                            │
                             │ ▌ 1  自动          默认 Unicode；旧式终端用 ASCII          │
                             │   2  Unicode       常用 Unicode 字体支持                   │
                             │   3  Nerd Font     需要 Nerd Font Mono                     │
                             │   4  ASCII         字体兼容性最高                          │
                             │                                                            │
                             │ ✓ 完成   ● 正在处理   ! 审阅   ✗ 失败                      │
                             │ ▌ 导航  ▸ 关闭  ▾ 打开  │ 状态  ⠋正在处理                  │
                             │ 偏好：自动  ·  当前：Unicode                               │
                             │                                                            │
                             │                                                            │
                             │                                                            │
                             │                                                            │
                             │                                                            │
                             │                                                            │
                             │                                                            │
                             │ [ Enter 应用 ] [ Esc 保留当前设置 ]                        │
                             ╰────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(25,0) (Rgb(150, 160, 156), Reset, NONE)
(106,0)..(113,0) (Rgb(150, 160, 156), Reset, NONE)
(114,0)..(120,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(120,1) (Rgb(52, 65, 68), Reset, NONE)
(29,2)..(91,2) (Rgb(52, 65, 68), Reset, NONE)
(29,3)..(30,3) (Rgb(52, 65, 68), Reset, NONE)
(31,3)..(89,3) (Rgb(150, 160, 156), Reset, NONE)
(90,3)..(91,3) (Rgb(52, 65, 68), Reset, NONE)
(29,4)..(30,4) (Rgb(52, 65, 68), Reset, NONE)
(31,4)..(89,4) (Rgb(150, 160, 156), Reset, NONE)
(90,4)..(91,4) (Rgb(52, 65, 68), Reset, NONE)
(29,5)..(30,5) (Rgb(52, 65, 68), Reset, NONE)
(31,5)..(89,5) (Reset, Rgb(36, 61, 62), BOLD)
(90,5)..(91,5) (Rgb(52, 65, 68), Reset, NONE)
(29,6)..(30,6) (Rgb(52, 65, 68), Reset, NONE)
(90,6)..(91,6) (Rgb(52, 65, 68), Reset, NONE)
(29,7)..(30,7) (Rgb(52, 65, 68), Reset, NONE)
(90,7)..(91,7) (Rgb(52, 65, 68), Reset, NONE)
(29,8)..(30,8) (Rgb(52, 65, 68), Reset, NONE)
(90,8)..(91,8) (Rgb(52, 65, 68), Reset, NONE)
(29,9)..(30,9) (Rgb(52, 65, 68), Reset, NONE)
(90,9)..(91,9) (Rgb(52, 65, 68), Reset, NONE)
(29,10)..(30,10) (Rgb(52, 65, 68), Reset, NONE)
(31,10)..(37,10) (Rgb(104, 210, 163), Reset, NONE)
(40,10)..(50,10) (Rgb(142, 219, 210), Reset, NONE)
(53,10)..(59,10) (Rgb(232, 168, 95), Reset, NONE)
(62,10)..(68,10) (Rgb(255, 124, 120), Reset, NONE)
(90,10)..(91,10) (Rgb(52, 65, 68), Reset, NONE)
(29,11)..(30,11) (Rgb(52, 65, 68), Reset, NONE)
(31,11)..(89,11) (Rgb(150, 160, 156), Reset, NONE)
(90,11)..(91,11) (Rgb(52, 65, 68), Reset, NONE)
(29,12)..(30,12) (Rgb(52, 65, 68), Reset, NONE)
(41,12)..(46,12) (Rgb(52, 65, 68), Reset, NONE)
(46,12)..(59,12) (Rgb(142, 219, 210), Reset, NONE)
(59,12)..(89,12) (Rgb(150, 160, 156), Reset, NONE)
(90,12)..(91,12) (Rgb(52, 65, 68), Reset, NONE)
(29,13)..(30,13) (Rgb(52, 65, 68), Reset, NONE)
(31,13)..(89,13) (Rgb(150, 160, 156), Reset, NONE)
(90,13)..(91,13) (Rgb(52, 65, 68), Reset, NONE)
(29,14)..(30,14) (Rgb(52, 65, 68), Reset, NONE)
(31,14)..(89,14) (Rgb(150, 160, 156), Reset, NONE)
(90,14)..(91,14) (Rgb(52, 65, 68), Reset, NONE)
(29,15)..(30,15) (Rgb(52, 65, 68), Reset, NONE)
(31,15)..(89,15) (Rgb(150, 160, 156), Reset, NONE)
(90,15)..(91,15) (Rgb(52, 65, 68), Reset, NONE)
(29,16)..(30,16) (Rgb(52, 65, 68), Reset, NONE)
(31,16)..(89,16) (Rgb(150, 160, 156), Reset, NONE)
(90,16)..(91,16) (Rgb(52, 65, 68), Reset, NONE)
(29,17)..(30,17) (Rgb(52, 65, 68), Reset, NONE)
(31,17)..(89,17) (Rgb(150, 160, 156), Reset, NONE)
(90,17)..(91,17) (Rgb(52, 65, 68), Reset, NONE)
(29,18)..(30,18) (Rgb(52, 65, 68), Reset, NONE)
(31,18)..(89,18) (Rgb(150, 160, 156), Reset, NONE)
(90,18)..(91,18) (Rgb(52, 65, 68), Reset, NONE)
(29,19)..(30,19) (Rgb(52, 65, 68), Reset, NONE)
(31,19)..(89,19) (Rgb(150, 160, 156), Reset, NONE)
(90,19)..(91,19) (Rgb(52, 65, 68), Reset, NONE)
(29,20)..(30,20) (Rgb(52, 65, 68), Reset, NONE)
(31,20)..(45,20) (Rgb(142, 219, 210), Reset, NONE)
(46,20)..(66,20) (Rgb(142, 219, 210), Reset, NONE)
(90,20)..(91,20) (Rgb(52, 65, 68), Reset, NONE)
(29,21)..(91,21) (Rgb(52, 65, 68), Reset, NONE)
